Add notebook notes

--- a/Thesis/thesis.bib
+++ b/Thesis/thesis.bib
@@ -1,3 +1,27 @@
+
+@book{owsinski_mixing_2017,
+	title = {The {Mixing} {Engineer}'s {Handbook}},
+	isbn = {978-0-9985033-4-9},
+	publisher = {Bobby Owsinski Media Group},
+	author = {Owsinski, Bobby},
+	year = {2017},
+}
+
+@article{huang_towards_2012,
+	title = {Towards an automatic music arrangement framework using score reduction},
+	volume = {8},
+	issn = {1551-6857},
+	url = {https://dl.acm.org/doi/10.1145/2071396.2071404},
+	doi = {10.1145/2071396.2071404},
+	number = {1},
+	urldate = {2024-12-05},
+	journal = {ACM Trans. Multimedia Comput. Commun. Appl.},
+	author = {Huang, Jiun-Long and Chiu, Shih-Chuan and Shan, Man-Kwan},
+	month = feb,
+	year = {2012},
+	pages = {8:1--8:23},
+}
+
 @article{lucas_ising_2014,
 	title = {Ising formulations of many {NP} problems},
 	volume = {2},
@@ -65,4 +89,16 @@
 	year = {2011},
 	note = {Publisher: Nature Publishing Group},
 	pages = {194--198},
+}
+
+@inproceedings{li_entropy_2019,
+	title = {Automatic {Piano} {Reduction} of {Orchestral} {Music} {Based} on {Musical} {Entropy}},
+	url = {https://ieeexplore.ieee.org/document/8693036},
+	doi = {10.1109/CISS.2019.8693036},
+	urldate = {2024-12-27},
+	booktitle = {2019 53rd {Annual} {Conference} on {Information} {Sciences} and {Systems} ({CISS})},
+	author = {Li, You and Wilk, Christoph M. and Hori, Takeshi and Sagayama, Shigeki},
+	month = mar,
+	year = {2019},
+	pages = {1--5},
 }
